<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_reminders">No reminders</string>
    <string name="title">Title</string>
    <string name="title_text_hint">Task Title</string>
    <string name="body">Body</string>
    <string name="reminder_date">Reminder Date</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="confirm">Confirm</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Item</string>

</resources>
